# Khronos

./: .gitignore  LICENSE  README.md
khronos/: CMakeLists.txt  package.xml
khronos/cmake/: KhronosInstall.cmake  khronosConfig.cmake.in
khronos/include/khronos/active_window/: active_window.h  graph_builder.h
khronos/include/khronos/backend/: backend.h  change_state.h  update_functions.h  update_khronos_objects_functor.h
khronos/include/khronos/common/: common_types.h  pixel.h
khronos/include/khronos/spatio_temporal_map/: incremental_mesh.h  spatio_temporal_map.h
khronos/include/khronos/utils/: data_directory.h  geometry_utils.h  khronos_attribute_utils.h  output_file_utils.h
khronos/src/active_window/: active_window.cpp  graph_builder.cpp
khronos/src/active_window/data/: frame_data_buffer.cpp  output_data.cpp  track.cpp
khronos/src/active_window/integration/: binary_semantic_integrator.cpp  object_integrator.cpp  projective_integrator.cpp  tracking_integrator.cpp
khronos/src/active_window/motion_detection/: free_space_motion_detector.cpp
khronos/src/backend/: backend.cpp  change_state.cpp  update_functions.cpp  update_khronos_objects_functor.cpp
khronos/src/spatio_temporal_map/: incremental_mesh.cpp  spatio_temporal_map.cpp
khronos/src/utils/: data_directory.cpp  geometry_utils.cpp  khronos_attribute_utils.cpp  output_file_utils.cpp
khronos_eval/: CMakeLists.txt  README.md  package.xml
khronos_eval/app/: cd_visualizer_node.cpp  create_gt.cpp  eval_visualizer_node.cpp  evaluate_meshes.cpp  exp_pipeline.cpp  exp_reconcile.cpp  hydra_converter.cpp
khronos_eval/app/.deprecated/: consolidate_gt.cpp  create_dynamic_object_gt.cpp  create_dynamic_object_gt_real_data.cpp  create_gt.cpp  evaluate_mesh.cpp  exp_change_detection.cpp  exp_evaluate_mesh.cpp  exp_reconcile.cpp  hydra_converter.cpp
khronos_eval/config/: change_detection.yaml  evaluate_mesh.yaml  evaluate_reconciliation.yaml
khronos_eval/config/ground_truth/: apartment.yaml  apartment_dynamic_object.yaml  consolidate_gt.yaml  mezzanine.yaml  office.yaml  tesse_cd_office_dynamic_objects.yaml
khronos_eval/config/pipeline/: apartment.yaml  dynablox.yaml  hydra_apartment.yaml  hydra_office.yaml  jackal.yaml  mezzanine.yaml  office.yaml  pm_apartment.yaml  pm_office.yaml
khronos_eval/config/visualization/: cd_visualizer.rviz  cd_visualizer.yaml  eval_visualizer.rviz
khronos_eval/include/khronos_eval/: cd_visualizer.h  dynamic_object_evaluator.h  eval_visualizer.h  mesh_evaluator.h  object_evaluator.h  pipeline_evaluator.h
khronos_eval/launch/: cd_visualizer.launch  cd_visualizer.launch.yaml  eval_visualizer.launch  eval_visualizer.launch.yaml
khronos_eval/plotting/: 4d_plots.py  compare_methods.py  frontend_experiments.py  mezzanine_4d.py  plot_4d.py  plot_mesh_ground_truths.py  plot_objects.py  plot_reconciliation.py  plot_reconciliation_details.py  plot_spatio_temporal_map.py  plot_spatio_temporal_map_eval.py  plot_timings_old.py  tables.py  timing.py  utils.py
khronos_eval/plotting/.deprecated/: 4d_plots.py  compare_methods.py  plot_4d.py  plot_objects.py  plot_reconciliation_details.py
khronos_eval/plotting/old/: uhumans.py
khronos_eval/scripts/: binarize_dsgs.py  create_dynamic_object_gt.sh  create_gt.sh  evaluate_pipeline.sh  parse_hydra.sh  real_data_dynamic_setup.py
khronos_eval/scripts/.deprecated/: consolidate_gt.sh  create_dynamic_object_gt.sh  create_dynamic_object_gt_real_data.sh  create_gt.sh
khronos_eval/scripts/old/: evaluate_change_detection.sh  evaluate_mesh.sh  evaluate_reconciliation.sh
khronos_eval/src/: cd_visualizer.cpp  dynamic_object_evaluator.cpp  eval_visualizer.cpp  mesh_evaluator.cpp  object_evaluator.cpp  pipeline_evaluator.cpp
khronos_eval/src/ground_truth/: gt_consolidator.cpp  real_dynamic_object_ground_truth_builder.cpp  tesse_dynamic_object_ground_truth_builder.cpp  tesse_ground_truth_builder.cpp
khronos_eval/src/utils/: io_utils.cpp
khronos_msgs/: CMakeLists.txt  package.xml
khronos_msgs/cfg/: KhronosChangeDetectionVis.cfg  KhronosEvalVis.cfg  KhronosMeshPlugin.cfg  KhronosSpatioTemporalVis.cfg
khronos_msgs/msg/: Changes.msg  ObjectChange.msg  SpatioTemporalVisualizerState.msg
khronos_msgs/srv/: SpatioTemporalVisualizerSetState.srv  SpatioTemporalVisualizerSetTimeMode.srv  SpatioTemporalVisualizerSetup.srv
khronos_ros/: CMakeLists.txt  Dockerfile  package.xml
khronos_ros/app/: dsg_visualizer_node.cpp  khronos_node.cpp  spatio_temporal_visualizer_node.cpp
khronos_ros/config/: qos_overrides.yaml
khronos_ros/config/datasets/: jackal.yaml  jackal_openset.yaml  uHumans2.yaml  uHumans2_openset.yaml
khronos_ros/config/mapper/: ground_truth.yaml  jackal.yaml  jackal_openset.yaml  uHumans2.yaml  uHumans2_openset.yaml
khronos_ros/config/openset/: sam_clip.yaml
khronos_ros/config/rviz/: 4d_visualizer.rviz  devel.rviz  jackal.rviz  reconciliation.rviz  uHumans2.rviz  uhumans2.rviz
khronos_ros/config/vio/jackal/: BackendParams.yaml  (+5 more)
khronos_ros/config/visualization/: 4d_visualizer.yaml  devel_dsg_visualizer.yaml  saved_dsg_visualizer.yaml  visualizer_config.yaml  visualizer_plugins.yaml
khronos_ros/include/khronos_ros/: khronos_pipeline.h
khronos_ros/launch/: 4d_visualizer.launch  4d_visualizer.launch.yaml  dsg_visualizer.launch  gui_4d_visualizer.launch  jackal_khronos.launch  jackal_khronos.launch.yaml  khronos.launch  khronos.launch.yaml  uhumans2_khronos.launch  uhumans2_khronos.launch.yaml  visualize_saved_dsg.launch  visualize_saved_dsg.launch.yaml
khronos_ros/launch/datasets/: play_jackal.launch  play_jackal.launch.yaml  play_uHumans.launch  play_uhumans.launch.yaml
khronos_ros/scripts/: odom_to_tf.py
khronos_ros/src/: khronos_pipeline.cpp
khronos_ros/src/experiments/: experiment_directory.cpp  experiment_logger.cpp  experiment_manager.cpp
khronos_ros/src/input/: openset_subscriber.cpp
khronos_ros/src/utils/: ros_conversions.cpp
khronos_ros/src/visualization/: active_window_visualizer.cpp  khronos_mesh_visualizer.cpp  spatio_temporal_visualizer.cpp  spatio_temporal_visualizer_gui.py  visualization_utils.cpp
(+74 files in other folders)
