<?xml version="1.0"?>
<package format="2">
  <name>khronos_msgs</name>
  <version>0.0.0</version>
  <description>Spatio-temporal Metric-Semantic SLAM.</description>

  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <author email="mabate@mit.edu">Marcus Abate</author>
  <author email="yunchang@mit.edu">Yun Chang</author>

  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>std_msgs</depend>

  <export>
  </export>
</package>
