<?xml version="1.0"?>
<package format="2">
  <name>khronos_ros</name>
  <version>0.0.0</version>
  <description>Spatio-temporal Metric-Semantic SLAM.</description>

  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <author email="mabate@mit.edu">Marcus Abate</author>
  <author email="yunchang@mit.edu">Yun Chang</author>

  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>khronos</depend>
  <depend>spark_dsg</depend>
  <depend>hydra</depend>
  <depend>hydra_ros</depend>
  <depend>hydra_visualizer</depend>
  <depend>pose_graph_tools</depend>
  <depend>pose_graph_tools_ros</depend>
  <depend>kimera_pgmo</depend>
  <depend>kimera_pgmo_ros</depend>
  <depend>config_utilities</depend>
  <depend>spatial_hash</depend>

  <depend>khronos_msgs</depend>
  <depend>kimera_pgmo_msgs</depend>
  <depend>pose_graph_tools_msgs</depend>
  <depend>sensor_msgs</depend>

  <depend>roscpp</depend>

  <exec_depend>kimera_pgmo_rviz</exec_depend>

  <export>
  </export>
</package>
