<?xml version="1.0"?>
<package format="3">
  <name>khronos_ros</name>
  <version>0.0.0</version>
  <description>Spatio-temporal Metric-Semantic SLAM.</description>

  <author email="lschmid@mit.edu">Lukas Schmid</author>
  <author email="mabate@mit.edu">Marcus Abate</author>
  <author email="yunchang@mit.edu">Yun Chang</author>

  <maintainer email="lschmid@mit.edu">Lukas Schmid</maintainer>
  <maintainer email="mabate@mit.edu">Marcus Abate</maintainer>
  <maintainer email="yunchang@mit.edu">Yun Chang</maintainer>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>hydra_ros</depend>
  <depend>khronos</depend>
  <depend>khronos_msgs</depend>
  <depend>libgflags-dev</depend>
  <depend>rclcpp</depend>
  <depend>std_srvs</depend>
  <depend>tf2_ros</depend>

  <exec_depend>kimera_pgmo_rviz</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-tk</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
